--- a/automation_basic/test-output/old/Default suite/classes.html
+++ b/automation_basic/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.basic.LinearOldCode</td>
+<td>tests.basic.PageObjectCode</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
