--- a/automation_basic/test-output/old/Default suite/methods-alphabetical.html
+++ b/automation_basic/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="868a7f">  <td>21/11/17 07:13:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.init()[pri:0, instance:tests.basic.PageObjectCode@63070bab]">&gt;&gt;init</td> 
-<td>&nbsp;</td>  <td>main@236840983</td>   <td></td> </tr>
-<tr bgcolor="868a7f">  <td>21/11/17 07:23:37</td>   <td>613294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:tests.basic.PageObjectCode@63070bab]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@236840983</td>   <td></td> </tr>
-<tr bgcolor="b7a4e0">  <td>21/11/17 07:13:26</td>   <td>1540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PageObjectCode.test()[pri:0, instance:tests.basic.PageObjectCode@63070bab]">test</td> 
-  <td>main@236840983</td>   <td></td> </tr>
+<tr bgcolor="a1778e">  <td>21/11/17 16:59:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.init()[pri:0, instance:tests.basic.PageObjectCode@38e79ae3]">&gt;&gt;init</td> 
+<td>&nbsp;</td>  <td>main@1496949625</td>   <td></td> </tr>
+<tr bgcolor="a1778e">  <td>21/11/17 17:00:29</td>   <td>32429</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:tests.basic.PageObjectCode@38e79ae3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1496949625</td>   <td></td> </tr>
+<tr bgcolor="658f60">  <td>21/11/17 16:59:59</td>   <td>2529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PageObjectCode.test()[pri:0, instance:tests.basic.PageObjectCode@38e79ae3]">test</td> 
+  <td>main@1496949625</td>   <td></td> </tr>
 </table>
